feat: two interactives graphs

--- a/lab9.ipynb
+++ b/lab9.ipynb
@@ -3109,7 +3109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -5284,7 +5284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -5302,7 +5302,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1e78d351e50>"
+       "<IPython.lib.display.IFrame at 0x1e78ec29190>"
       ]
      },
      "metadata": {},
@@ -5317,11 +5317,28 @@
     "\n",
     "app.layout = html.Div([\n",
     "    html.H1(\"Análisis de Datos sobre Gobierno de Bernardo Arévalo\"),\n",
-    "    dcc.Graph(id='centralidad-grafo'),\n",
+    "    \n",
+    "    # NUBE DE MENCIONES\n",
+    "    # Input para seleccionar una mención\n",
+    "    dcc.Input(id='mencion-buscada', type='text', placeholder='Escribe una mención (@usuario...)'),\n",
+    "    # Gráfico de la nube de menciones\n",
     "    dcc.Graph(id='nube-menciones'),\n",
+    "    # Sección para mostrar los tweets\n",
+    "    html.Div(id='tweets-filtrados', children=[]),\n",
+    "\n",
+    "\n",
+    "    # CENTRALIDAD DE GRADO\n",
+    "    dcc.Graph(id='centralidad-grafo'),\n",
+    "     # Input para ingresar el valor mínimo de centralidad\n",
+    "    dcc.Input(id='centralidad-minima', type='number', placeholder='Ingrese el valor mínimo de centralidad...'),\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "    dcc.Graph(id='top-menciones'),\n",
     "    dcc.Graph(id='sentimientos')\n",
     "])\n",
+    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True)\n"
@@ -5329,36 +5346,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# Callback para actualizar el gráfico de centralidad de grado\n",
     "@app.callback(\n",
     "    Output('centralidad-grafo', 'figure'),\n",
-    "    [Input('centralidad-selector', 'value')]\n",
+    "    [Input('centralidad-selector', 'value'),\n",
+    "     Input('centralidad-minima', 'value')]  # Nuevo input para filtrar por centralidad mínima\n",
     ")\n",
-    "def update_centralidad(centralidad_selector):\n",
-    "    # Gráfico que ya creaste en tu código para Top 10 Usuarios por Centralidad de Grado\n",
-    "    fig_degree = px.bar(top_10_degree_df, x='Usuario', y='Centralidad de Grado', \n",
-    "                 title=\"Top 10 Usuarios por Centralidad de Grado\",\n",
-    "                 labels={'Usuario': 'Usuario', 'Centralidad de Grado': 'Centralidad de Grado'})\n",
-    "    return fig_degree\n"
+    "def update_centralidad(centralidad_selector, centralidad_minima):\n",
+    "    # Si no se ha ingresado un valor mínimo de centralidad, se establece un valor por defecto (0)\n",
+    "    if centralidad_minima is None:\n",
+    "        centralidad_minima = 0\n",
+    "    \n",
+    "    # Filtrar los usuarios cuya centralidad sea mayor o igual al valor ingresado\n",
+    "    filtered_df = top_10_degree_df[top_10_degree_df['Centralidad de Grado'] >= centralidad_minima]\n",
+    "    \n",
+    "    # Limitar el DataFrame al top `n` usuarios seleccionados en el dropdown\n",
+    "    top_n_degree_df = filtered_df.head(centralidad_selector)\n",
+    "    \n",
+    "    # Verificar los datos filtrados\n",
+    "    print(f\"Filtrando con centralidad mínima de {centralidad_minima}\")\n",
+    "    print(top_n_degree_df)\n",
+    "    \n",
+    "    # Crear el gráfico con Plotly\n",
+    "    fig_degree = px.bar(top_n_degree_df, x='Usuario', y='Centralidad de Grado', \n",
+    "                        title=f\"Top {centralidad_selector} Usuarios por Centralidad >= {centralidad_minima}\",\n",
+    "                        labels={'Usuario': 'Usuario', 'Centralidad de Grado': 'Centralidad de Grado'})\n",
+    "    \n",
+    "    return fig_degree\n",
+    "\n",
+    "# Layout de la app corregido\n",
+    "app.layout = html.Div([\n",
+    "    html.H1(\"Análisis de Datos sobre Gobierno de Bernardo Arévalo\"),\n",
+    "\n",
+    "    # NUBE DE MENCIONES\n",
+    "    # Input para seleccionar una mención\n",
+    "    dcc.Input(id='mencion-buscada', type='text', placeholder='Escribe una mención (@usuario...)'),\n",
+    "    # Gráfico de la nube de menciones\n",
+    "    dcc.Graph(id='nube-menciones'),\n",
+    "    # Sección para mostrar los tweets\n",
+    "    html.Div(id='tweets-filtrados', children=[]),\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # Dropdown para seleccionar la cantidad de usuarios a mostrar en centralidad de grado\n",
+    "    dcc.Dropdown(\n",
+    "        id='centralidad-selector',\n",
+    "        options=[{'label': f'Top {i} Usuarios', 'value': i} for i in [5, 10]],\n",
+    "        value=10  # Valor por defecto\n",
+    "    ),\n",
+    "    \n",
+    "    # Gráfico de centralidad de grado\n",
+    "    dcc.Graph(id='centralidad-grafo'),\n",
+    "    # Input para ingresar el valor mínimo de centralidad\n",
+    "    dcc.Input(id='centralidad-minima', type='number', placeholder='Ingrese el valor mínimo de centralidad...'),\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    # Dropdown para seleccionar una mención específica\n",
+    "    dcc.Dropdown(\n",
+    "        id='mencion-seleccionada',\n",
+    "        options=[{'label': mention, 'value': mention} for mention in top_mentions['mention']],\n",
+    "        value=top_mentions['mention'][0]  # Valor predeterminado: primera mención\n",
+    "    ),\n",
+    "\n",
+    "    # Gráfico de menciones\n",
+    "    dcc.Graph(id='top-menciones'),\n",
+    "\n",
+    "    # Dropdown para seleccionar el sentimiento\n",
+    "    dcc.Dropdown(\n",
+    "        id='sentimiento-seleccionado',  # Este es el ID que usaremos en el callback de sentimientos\n",
+    "        options=[\n",
+    "            {'label': 'Positivo', 'value': 'positivo'},\n",
+    "            {'label': 'Negativo', 'value': 'negativo'},\n",
+    "            {'label': 'Neutral', 'value': 'neutral'}\n",
+    "        ],\n",
+    "        value='positivo'  # Valor predeterminado\n",
+    "    ),\n",
+    "\n",
+    "    # Gráfico de sentimientos\n",
+    "    dcc.Graph(id='sentimientos')\n",
+    "])\n",
+    "\n",
+    "# Aquí también iría el callback para el gráfico de sentimientos, asegurándote de usar el ID correcto\n",
+    "@app.callback(\n",
+    "    Output('sentimientos', 'figure'),\n",
+    "    [Input('sentimiento-seleccionado', 'value')]\n",
+    ")\n",
+    "def update_sentimientos(sentimiento_seleccionado):\n",
+    "    # Lógica para filtrar y mostrar el gráfico de sentimientos basado en 'sentimiento-seleccionado'\n",
+    "    # Aquí deberías tener la lógica para crear el gráfico de sentimientos\n",
+    "    fig_sentimientos = px.bar()  # Ejemplo vacío, reemplazar con tu lógica de sentimientos\n",
+    "    return fig_sentimientos\n",
+    "\n",
+    "\n",
+    "\n",
+    "## NUBE DE MENCIONES\n",
+    "\n",
+    "# Callback para generar la nube de palabras y filtrar tweets\n",
+    "@app.callback(\n",
+    "    [Output('nube-menciones', 'figure'),\n",
+    "     Output('tweets-filtrados', 'children')],\n",
+    "    [Input('mencion-buscada', 'value')]\n",
+    ")\n",
+    "def update_nube_menciones(mencion_buscada):\n",
+    "    # Generar la nube de palabras\n",
+    "    def color_func(*args, **kwargs):\n",
+    "        colors = ['#40E0D0', '#BFFF00', '#800080']  # Turquesa, verde limón, morado\n",
+    "        return np.random.choice(colors)\n",
+    "    \n",
+    "    wordcloud_mentions = WordCloud(width=800, height=400, background_color='white', color_func=color_func).generate(mentions_string)\n",
+    "    wordcloud_img = wordcloud_mentions.to_array()\n",
+    "    \n",
+    "    fig_nube = px.imshow(wordcloud_img)\n",
+    "    fig_nube.update_layout(\n",
+    "        title='Nube de Palabras de Menciones',\n",
+    "        xaxis=dict(showticklabels=False),\n",
+    "        yaxis=dict(showticklabels=False),\n",
+    "        coloraxis_showscale=False,\n",
+    "        margin=dict(l=0, r=0, t=30, b=0)\n",
+    "    )\n",
+    "\n",
+    "    # Filtrar hasta 5 tweets que mencionen la palabra buscada\n",
+    "    if mencion_buscada:\n",
+    "        tweets_filtrados = df[df['rawContent'].str.contains(mencion_buscada, case=False, na=False)]\n",
+    "        tweets_mostrar = tweets_filtrados['rawContent'].head(5).tolist()\n",
+    "    else:\n",
+    "        tweets_mostrar = []\n",
+    "\n",
+    "    # Crear los elementos HTML para mostrar los tweets\n",
+    "    tweets_elements = []\n",
+    "    for tweet in tweets_mostrar:\n",
+    "        tweets_elements.append(html.P(tweet))\n",
+    "\n",
+    "    return fig_nube, tweets_elements\n",
+    "\n",
+    "\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output('top-menciones', 'figure'),\n",
+    "    [Input('mencion-seleccionada', 'value')]\n",
+    ")\n",
+    "def update_top_menciones(mencion_seleccionada):\n",
+    "    fig_top_menciones = px.bar(top_mentions, x='mention', y='count', \n",
+    "                               title='Top 50 Menciones en Tweets',\n",
+    "                               labels={'mention': 'Mención de Usuario', 'count': 'Cantidad'})\n",
+    "    return fig_top_menciones\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contenido completo de top_10_degree_df:\n",
+      "          Usuario  Centralidad de Grado\n",
+      "0  BArevalodeLeon              0.812964\n",
+      "1    GuatemalaGob              0.198323\n",
+      "2      UbaldoMacu              0.134795\n",
+      "3    santipalomov              0.119316\n",
+      "4     MPguatemala              0.108352\n",
+      "5  FJimenezmingob              0.090293\n",
+      "6       __VaderTG              0.075782\n",
+      "7   CongresoGuate              0.070300\n",
+      "8     mingobguate              0.067075\n",
+      "9      USAIDGuate              0.060626\n"
+     ]
+    }
+   ],
    "source": [
-    "@app.callback(\n",
-    "    Output('nube-menciones', 'figure'),\n",
-    "    [Input('palabra-mencionada', 'value')]\n",
-    ")\n",
-    "def update_nube_menciones(palabra_mencionada):\n",
-    "    # Código para generar la nube de palabras\n",
-    "    fig_nube = px.imshow(np.array(img))\n",
-    "    return fig_nube\n"
+    "print(\"Contenido completo de top_10_degree_df:\")\n",
+    "print(top_10_degree_df)\n"
    ]
   }
  ],
