feat: sentimental dash

--- a/lab9.ipynb
+++ b/lab9.ipynb
@@ -5284,7 +5284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -5302,11 +5302,29 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1e78ec29190>"
+       "<IPython.lib.display.IFrame at 0x1e7955c0cd0>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtrando con centralidad mínima de 0\n",
+      "          Usuario  Centralidad de Grado\n",
+      "0  BArevalodeLeon              0.812964\n",
+      "1    GuatemalaGob              0.198323\n",
+      "2      UbaldoMacu              0.134795\n",
+      "3    santipalomov              0.119316\n",
+      "4     MPguatemala              0.108352\n",
+      "5  FJimenezmingob              0.090293\n",
+      "6       __VaderTG              0.075782\n",
+      "7   CongresoGuate              0.070300\n",
+      "8     mingobguate              0.067075\n",
+      "9      USAIDGuate              0.060626\n"
+     ]
     }
    ],
    "source": [
@@ -5346,7 +5364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5407,41 +5425,58 @@
     "\n",
     "\n",
     "    \n",
-    "\n",
-    "    # Dropdown para seleccionar una mención específica\n",
+    "    ## TOP MENCIONES\n",
+    "    # Dropdown para seleccionar una mención específica o \"Todos\"\n",
     "    dcc.Dropdown(\n",
     "        id='mencion-seleccionada',\n",
-    "        options=[{'label': mention, 'value': mention} for mention in top_mentions['mention']],\n",
-    "        value=top_mentions['mention'][0]  # Valor predeterminado: primera mención\n",
+    "        options=[{'label': 'Todos', 'value': 'Todos'}] + [{'label': mention, 'value': mention} for mention in top_mentions['mention']],\n",
+    "        value='Todos'  # Valor predeterminado que muestra todos los datos\n",
     "    ),\n",
     "\n",
     "    # Gráfico de menciones\n",
     "    dcc.Graph(id='top-menciones'),\n",
+    "    \n",
     "\n",
-    "    # Dropdown para seleccionar el sentimiento\n",
+    "    # Dropdown para seleccionar el sentimiento (1-5 estrellas)\n",
     "    dcc.Dropdown(\n",
     "        id='sentimiento-seleccionado',  # Este es el ID que usaremos en el callback de sentimientos\n",
     "        options=[\n",
-    "            {'label': 'Positivo', 'value': 'positivo'},\n",
-    "            {'label': 'Negativo', 'value': 'negativo'},\n",
-    "            {'label': 'Neutral', 'value': 'neutral'}\n",
+    "            {'label': '1 Estrella', 'value': '1 star'},\n",
+    "            {'label': '2 Estrellas', 'value': '2 stars'},\n",
+    "            {'label': '3 Estrellas', 'value': '3 stars'},\n",
+    "            {'label': '4 Estrellas', 'value': '4 stars'},\n",
+    "            {'label': '5 Estrellas', 'value': '5 stars'}\n",
     "        ],\n",
-    "        value='positivo'  # Valor predeterminado\n",
+    "        value='5 stars'  # Valor predeterminado\n",
     "    ),\n",
+    "\n",
     "\n",
     "    # Gráfico de sentimientos\n",
     "    dcc.Graph(id='sentimientos')\n",
     "])\n",
     "\n",
-    "# Aquí también iría el callback para el gráfico de sentimientos, asegurándote de usar el ID correcto\n",
+    "\n",
+    "# Callback para actualizar el gráfico de sentimientos\n",
     "@app.callback(\n",
     "    Output('sentimientos', 'figure'),\n",
     "    [Input('sentimiento-seleccionado', 'value')]\n",
     ")\n",
     "def update_sentimientos(sentimiento_seleccionado):\n",
-    "    # Lógica para filtrar y mostrar el gráfico de sentimientos basado en 'sentimiento-seleccionado'\n",
-    "    # Aquí deberías tener la lógica para crear el gráfico de sentimientos\n",
-    "    fig_sentimientos = px.bar()  # Ejemplo vacío, reemplazar con tu lógica de sentimientos\n",
+    "    # Filtrar el DataFrame por el sentimiento seleccionado\n",
+    "    if sentimiento_seleccionado:\n",
+    "        df_filtrado = df[df['sentimiento_bert'] == sentimiento_seleccionado]\n",
+    "    else:\n",
+    "        df_filtrado = df  # Si no hay selección, mostrar todos los datos\n",
+    "    \n",
+    "    # Contar la cantidad de tweets para el sentimiento seleccionado\n",
+    "    sentimiento_counts = df_filtrado['sentimiento_bert'].value_counts().reset_index()\n",
+    "    sentimiento_counts.columns = ['sentimiento_bart', 'count']\n",
+    "    \n",
+    "    # Crear el gráfico de barras\n",
+    "    fig_sentimientos = px.bar(sentimiento_counts, x='sentimiento_bart', y='count',\n",
+    "                              title=f'Distribución de Tweets por Sentimiento ({sentimiento_seleccionado})',\n",
+    "                              labels={'sentimiento': 'Sentimiento', 'count': 'Cantidad de Tweets'})\n",
+    "    \n",
     "    return fig_sentimientos\n",
     "\n",
     "\n",
@@ -5488,15 +5523,36 @@
     "\n",
     "\n",
     "\n",
+    "# Callback para actualizar el gráfico de menciones según la selección\n",
     "@app.callback(\n",
     "    Output('top-menciones', 'figure'),\n",
     "    [Input('mencion-seleccionada', 'value')]\n",
     ")\n",
     "def update_top_menciones(mencion_seleccionada):\n",
-    "    fig_top_menciones = px.bar(top_mentions, x='mention', y='count', \n",
-    "                               title='Top 50 Menciones en Tweets',\n",
-    "                               labels={'mention': 'Mención de Usuario', 'count': 'Cantidad'})\n",
-    "    return fig_top_menciones\n"
+    "    if mencion_seleccionada == 'Todos':\n",
+    "        # Mostrar todos los datos del DataFrame 'top_mentions'\n",
+    "        fig_top_menciones = px.bar(top_mentions, x='mention', y='count', \n",
+    "                                   title='Top 50 Menciones en Tweets',\n",
+    "                                   labels={'mention': 'Mención de Usuario', 'count': 'Cantidad'})\n",
+    "    else:\n",
+    "        # Filtrar los tweets que contienen la mención seleccionada\n",
+    "        tweets_filtrados = df[df['rawContent'].str.contains(mencion_seleccionada, case=False, na=False)]\n",
+    "        \n",
+    "        # Contar cuántos tweets mencionan al usuario seleccionado\n",
+    "        count_tweets = len(tweets_filtrados)\n",
+    "        \n",
+    "        # Crear un DataFrame para la gráfica\n",
+    "        mention_data = pd.DataFrame({\n",
+    "            'mention': [mencion_seleccionada],\n",
+    "            'count': [count_tweets]\n",
+    "        })\n",
+    "\n",
+    "        # Crear la gráfica de barras actualizada solo para la mención seleccionada\n",
+    "        fig_top_menciones = px.bar(mention_data, x='mention', y='count', \n",
+    "                                   title=f'Tweets que mencionan a {mencion_seleccionada}',\n",
+    "                                   labels={'mention': 'Mención de Usuario', 'count': 'Cantidad de Tweets'})\n",
+    "    \n",
+    "    return fig_top_menciones"
    ]
   },
   {
